--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <center>
 <boton1>
 Este Sitio está en Versión Beta
+Puedes contribuir en el proyecto haciendo click <a src="https://github.com/skaryxd/pok-monYT">AQUI</a>
 </boton1>
 </center>
  </body> 
