--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 <center>
 <boton1>
 Este Sitio está en Versión Beta
-Puedes contribuir en el proyecto haciendo click <br />
-<a href="https://github.com/skaryxd/pok-monYT">AQUI</a>
+Puedes contribuir en el proyecto haciendo click <p>
+<a href="https://github.com/skaryxd/Pokemon-PHGP">AQUI</a>
 </boton1>
 </center>
  </body> 
