--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 <p>
 <center>
 <boton1>
-Este Sitio está en Versión Beta
-Puedes contribuir en el proyecto haciendo click <p>
-<a href="https://github.com/skaryxd/Pokemon-PHGP">AQUI</a>
+Este Sitio está en Versión Beta<br />
+Puedes contribuir en el proyecto haciendo click <a href="https://github.com/skaryxd/Pokemon-PHGP">AQUI</a>
 </boton1>
 </center>
  </body> 
