--- a/glazed.html
+++ b/glazed.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- TITULO -->
-	<title>Pokémon Glazed Room Hack | GBA | PDJ</title>
+	<title>Pokémon Glazed | GBA Room Hack | PDJ</title>
 	<!-- JS --> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
