--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 		<!-- SILVER --> 
 	<img widht=175 height=175 border=3 title="Silver (S)" src="imagenes/silver.jpg?=pdj"></img>
 	</a>
-		<!-- DARK VIOLET --> 
-	<a href="javascript:void(0);" id="Dark_violet" onclick="window.open('dark_violet.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Dark Violet (E)" src="imagenes/dark_violet.png?=pdj"></img>
+		<!-- RUBI-RANDOM-LOCKE --> 
+	<a href="javascript:void(0);" id="Rubi_Random_Locke" onclick="window.open('rubi_random_locke.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<img widht=175 height=175 border=3 title="Rubi Random Locke (E)" src="imagenes/ruby_random_locke.jpg?=pdj"></img>
 	</a>
 	<img widht=175 height=175 border=3 title="Naranja" src="imagenes/naranja.jpg?=pdj"></img>
 	<img widht=175 height=175 border=3 title="Chaos Black" src="imagenes/chaosblack.jpg?=pdj"></img>
