--- a/rubi_random_locke.html
+++ b/rubi_random_locke.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- TITULO -->
-	<title>Pokémon Rubi | GBA | PDJ</title>
+	<title>Pokémon Rubi Random Locke | GBA Room Hack | PDJ</title>
 	<!-- JS --> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -60,7 +60,7 @@
                 var flashvars = 
                 {
                     system : 'gba',
-                    url : '/roms/Pokemon - Rubi (S).zip'
+                    url : '/roms/Pokemon - Rubí (RandomLocke) (S).zip'
                 };
                 var params = {};
                 var attributes = {};
@@ -80,7 +80,7 @@
 <p>
 </div>
 <center>
-<p><boton2><a href="/roms/Pokemon - Rubi (S).zip">Click AQUI para descargar</a></boton2></p>
+<p><boton2><a href="/roms/Pokemon - Rubí (RandomLocke) (S).zip">Click AQUI para descargar</a></boton2></p>
 </center>
 </body>
 </html>
