Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
 
 <p>Juegos en línea de Pokémon.</p>
 
+<p>Lista de Roms Activos:</p>
+
+<ol>
+<li><p>Pokémon Rojo Fuego <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Verde Hoja <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Rubí <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Zafiro <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Zei <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Esmeralda <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Glazed <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Rubí Random Locke <img class="emoji" title=":white_check_mark:" alt=":white_check_mark:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2705.png" height="20" width="20" align="absmiddle"></p></li>
+</ol>
+
+<p>Lista de Roms Desactivados</p>
+
+<ol>
+<li><p>Pokémon Silver <img class="emoji" title=":no_entry_sign:" alt=":no_entry_sign:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f6ab.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Naranja <img class="emoji" title=":no_entry_sign:" alt=":no_entry_sign:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f6ab.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Genesis <img class="emoji" title=":no_entry_sign:" alt=":no_entry_sign:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f6ab.png" height="20" width="20" align="absmiddle"></p></li>
+<li><p>Pokémon Chaos Black <img class="emoji" title=":no_entry_sign:" alt=":no_entry_sign:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f6ab.png" height="20" width="20" align="absmiddle"></p></li>
+</ol>
+
 <p>Se usa NESBox en JavaScript para emular los roms.</p>
 
 <p>Roms originales y Hack Rooms <img class="emoji" title=":es:" alt=":es:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f1ea-1f1f8.png" height="20" width="20" align="absmiddle">.</p>
