--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 	<a href="javascript:void(0);" id="Rubi_Random_Locke" onclick="window.open('rubi_random_locke.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
 	<img widht=175 height=175 border=3 title="Rubi Random Locke (E)" src="imagenes/ruby_random_locke.jpg?=pdj"></img>
 	</a>
-	<img widht=175 height=175 border=3 title="Naranja" src="imagenes/naranja.jpg?=pdj"></img>
+		<!-- Life of Guardians --> 
+	<a href="javascript:void(0);" id="Life of Guardians" onclick="window.open('life_of_guardians.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<img widht=175 height=175 border=3 title="Life of Guardians (E)" src="imagenes/life_of_guardians.jpg?=pdj"></img>
+	</a>
 	<img widht=175 height=175 border=3 title="Chaos Black" src="imagenes/chaosblack.jpg?=pdj"></img>
 	<img widht=175 height=175 border=3 title="Genesis" src="imagenes/genesis.jpg?=pdj"></img>
 	</div>
