--- a/rubi_random_locke.html
+++ b/rubi_random_locke.html
@@ -22,7 +22,7 @@
 <body>
 <p>
 <center>
-<titulo>Pokémon Rubi | GBA</titulo>
+<titulo>Pokémon Rubi Random Locke | GBA Room Hack</titulo>
 </center>
 <p>
 
@@ -60,7 +60,7 @@
                 var flashvars = 
                 {
                     system : 'gba',
-                    url : '/roms/Pokemon - Rubí (RandomLocke) (S).zip'
+                    url : '/roms/Pokemon - Rubí (RandomLocke) (E).zip'
                 };
                 var params = {};
                 var attributes = {};
@@ -80,7 +80,7 @@
 <p>
 </div>
 <center>
-<p><boton2><a href="/roms/Pokemon - Rubí (RandomLocke) (S).zip">Click AQUI para descargar</a></boton2></p>
+<p><boton2><a href="/roms/Pokemon - Rubí (RandomLocke) (E).zip">Click AQUI para descargar</a></boton2></p>
 </center>
 </body>
 </html>
