--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
 	<a href="javascript:void(0);" id="Glazed" onclick="window.open('glazed.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
 	<img widht=175 height=175 border=3 title="Glazed (S)" src="imagenes/glazed.jpg?=pdj"></img>
 	</a>
-		<!-- SILVER --> 
-	<img widht=175 height=175 border=3 title="Silver (S)" src="imagenes/silver.jpg?=pdj"></img>
+		<!-- Light Platinum --> 
+	<a href="javascript:void(0);" id="Light_Platinum" onclick="window.open('light_platinum.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<img widht=175 height=175 border=3 title="Light Platinum (S)" src="imagenes/light_platinum.png?=pdj"></img>
+	</a>
 		<!-- RUBI-RANDOM-LOCKE --> 
 	<a href="javascript:void(0);" id="Rubi_Random_Locke" onclick="window.open('rubi_random_locke.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
 	<img widht=175 height=175 border=3 title="Rubi Random Locke (E)" src="imagenes/ruby_random_locke.jpg?=pdj"></img>
 	</a>
 		<!-- Life of Guardians --> 
-	<a href="javascript:void(0);" id="Life of Guardians" onclick="window.open('life_of_guardians.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<a href="javascript:void(0);" id="Life_of_Guardians" onclick="window.open('life_of_guardians.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
 	<img widht=175 height=175 border=3 title="Life of Guardians (E)" src="imagenes/life_of_guardians.jpg?=pdj"></img>
 	</a>
 	<img widht=175 height=175 border=3 title="Chaos Black" src="imagenes/chaosblack.jpg?=pdj"></img>
