--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
 	<a href="javascript:void(0);" id="Life_of_Guardians" onclick="window.open('life_of_guardians.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
 	<img widht=175 height=175 border=3 title="Life of Guardians (E)" src="imagenes/life_of_guardians.jpg?=pdj"></img>
 	</a>
-	<img widht=175 height=175 border=3 title="Chaos Black" src="imagenes/chaosblack.jpg?=pdj"></img>
-	<img widht=175 height=175 border=3 title="Genesis" src="imagenes/genesis.jpg?=pdj"></img>
+		<!-- Resolute --> 
+	<a href="javascript:void(0);" id="Resolute" onclick="window.open('resolute.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<img widht=175 height=175 border=3 title="Resolute (E)" src="imagenes/resolute.jpg?=pdj"></img>
+	</a>
+		<!-- Liquid Crystal --> 
+	<a href="javascript:void(0);" id="Liquid_Crystal" onclick="window.open('liquid_crystal.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
+	<img widht=175 height=175 border=3 title="Liquid Crystal (E)" src="imagenes/liquid_crystal.jpg?=pdj"></img>
+	</a>
 	</div>
 </div>
 <p>
