--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script type="text/javascript" src="js/efectos.js"></script>
+	<script type="text/javascript" src="js/ventana_emergente.js"></script>
 	<!-- CSS --> 
 	<link rel="stylesheet" href="css/estilo_base.css" media="all" />
 
 </head> 
 <body>
 <center>
-<titulo>Pokémon Rooms & Hack Rooms</titulo>
+<titulo>Pokémon Rooms & Hack Rooms</titulo><licencia><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Licencia Creative Commons" src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>.
+</licencia>
 <p>
 <boton1>Web creada por <font color="orange">Joaquin Centurion</font></boton1>
 </p>
@@ -32,53 +34,53 @@
 	<div align="center">
 	</br>
 		<!-- ROJO FUEGO --> 
-	<a href="javascript:void(0);" id="Fuego" onclick="window.open('rojofuego.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 title="Rojo Fuego (S)" src="imagenes/rojofuego.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('rojofuego.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Fuego">
+		<img class="efecto" widht=175 height=175 border=3 title="Rojo Fuego (S)" src="imagenes/rojofuego.jpg?=pdj"></img>
 	</a>
 		<!-- VERDE HOJA --> 
-	<a href="javascript:void(0);" id="VerdeHoja" onclick="window.open('verdehoja.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 title="Verde Hoja (S)" src="imagenes/verdehoja.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('verdehoja.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="VerdeHoja">
+		<img class="efecto" widht=175 height=175 border=3 title="Verde Hoja (S)" src="imagenes/verdehoja.jpg?=pdj"></img>
 	</a>
 		<!-- RUBI --> 
-	<a href="javascript:void(0);" id="Rubi" onclick="window.open('rubi.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 title="Rubi  (S)" src="imagenes/rubi.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('rubi.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Rubi">
+		<img class="efecto" widht=175 height=175 border=3 title="Rubi  (S)" src="imagenes/rubi.jpg?=pdj"></img>
 	</a>
 		<!-- ZAFIRO --> 
-	<a href="javascript:void(0);" id="Zafiro" onclick="window.open('zafiro.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 title="Zafiro (S)" src="imagenes/zafiro.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('zafiro.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Zafiro">
+		<img class="efecto" widht=175 height=175 border=3 title="Zafiro (S)" src="imagenes/zafiro.jpg?=pdj"></img>
 	</a>
 		<!-- ZEI --> 
-	<a href="javascript:void(0);" id="Zei" onclick="window.open('zei.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 title="Zei (S)" src="imagenes/zei.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('zei.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Zei">
+		<img class="efecto" widht=175 height=175 border=3 title="Zei (S)" src="imagenes/zei.jpg?=pdj"></img>
 	</a>
 		<!-- ESMERALDA --> 
-	<a href="javascript:void(0);" id="Esmeralda" onclick="window.open('esmeralda.html', 'popup', 'left=390, top=200, width=800, height=600, toolbar=0, resizable=1')">
-		<img widht=175 height=175 border=3 src="imagenes/esmeralda.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('esmeralda.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Esmeralda">
+		<img class="efecto" widht=175 height=175 border=3 src="imagenes/esmeralda.jpg?=pdj"></img>
 	</a>
 	<p>
 		<!-- GLAZED --> 
-	<a href="javascript:void(0);" id="Glazed" onclick="window.open('glazed.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Glazed (S)" src="imagenes/glazed.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('glazed.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Glazed">
+	<img class="efecto" widht=175 height=175 border=3 title="Glazed (S)" src="imagenes/glazed.jpg?=pdj"></img>
 	</a>
 		<!-- Light Platinum --> 
-	<a href="javascript:void(0);" id="Light_Platinum" onclick="window.open('light_platinum.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Light Platinum (S)" src="imagenes/light_platinum.png?=pdj"></img>
+	<a onclick="PopupCenterDual('light_platinum.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Light_Platinum">
+	<img class="efecto" widht=175 height=175 border=3 title="Light Platinum (S)" src="imagenes/light_platinum.png?=pdj"></img>
 	</a>
 		<!-- RUBI-RANDOM-LOCKE --> 
-	<a href="javascript:void(0);" id="Rubi_Random_Locke" onclick="window.open('rubi_random_locke.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Rubi Random Locke (E)" src="imagenes/ruby_random_locke.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('rubi_random_locke.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Rubi_Random_Locke">
+	<img class="efecto" widht=175 height=175 border=3 title="Rubi Random Locke (E)" src="imagenes/ruby_random_locke.jpg?=pdj"></img>
 	</a>
 		<!-- Life of Guardians --> 
-	<a href="javascript:void(0);" id="Life_of_Guardians" onclick="window.open('life_of_guardians.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Life of Guardians (E)" src="imagenes/life_of_guardians.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('life_of_guardians.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Life_of_Guardians">
+	<img class="efecto" widht=175 height=175 border=3 title="Life of Guardians (E)" src="imagenes/life_of_guardians.jpg?=pdj"></img>
 	</a>
 		<!-- Resolute --> 
-	<a href="javascript:void(0);" id="Resolute" onclick="window.open('resolute.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Resolute (E)" src="imagenes/resolute.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('resolute.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Resolute">
+	<img class="efecto" widht=175 height=175 border=3 title="Resolute (E)" src="imagenes/resolute.jpg?=pdj"></img>
 	</a>
 		<!-- Liquid Crystal --> 
-	<a href="javascript:void(0);" id="Liquid_Crystal" onclick="window.open('liquid_crystal.html', 'popup', 'left=250, top=250, width=800, height=600, toolbar=0, resizable=1')">
-	<img widht=175 height=175 border=3 title="Liquid Crystal (E)" src="imagenes/liquid_crystal.jpg?=pdj"></img>
+	<a onclick="PopupCenterDual('liquid_crystal.html','NIGRAPHIC','900','600'); " href="javascript:void(0);" id="Liquid_Crystal">
+	<img class="efecto" widht=175 height=175 border=3 title="Liquid Crystal (E)" src="imagenes/liquid_crystal.jpg?=pdj"></img>
 	</a>
 	</div>
 </div>
@@ -93,3 +95,5 @@ Puedes contribuir en el proyecto haciendo click <a href="https://github.com/skar
  </html>
  <!Web creada por PHGP | Programación de Juegos - HGP>
  <!Sistema implementado de NESBox Emulador Web en JavaScript>
+ 
+ <! © 2016 Pokémon. © 1995-2016 Nintendo/Creatures Inc./GAME FREAK inc. Pokémon, los nombres de los personajes de Pokémon, Nintendo 3DS, Nintendo DS, Wii y Wiiware son marcas comerciales de Nintendo. Las marcas comerciales restantes pertenecen a sus respectivos propietarios. >
