--- a/rubi.html
+++ b/rubi.html
@@ -86,3 +86,4 @@
 </html>
  <!Web creada por PDJ | Programación de Juegos - HGP>
  <!Sistema implementado de NESBox Emulador Web en JavaScript>
+  <! © 2003 Pokémon © 1995 - 2003 Nintendo/Creatures Inc./GAME FREAK inc. TM AND R ARE TRADEMARKS OF NINTENDO. © 2003 Nintendo. >
