--- a/verdehoja.html
+++ b/verdehoja.html
@@ -86,3 +86,4 @@
 </html>
  <!Web creada por PDJ | Programación de Juegos - HGP>
  <!Sistema implementado de NESBox Emulador Web en JavaScript>
+ <! © 2004 Pokémon. ©1995-2004 Nintendo/Creatures Inc./GAME FREAK inc. TM and ® are trademarks of Nintendo. © 2004 Nintendo. >
