--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Pokemon Rooms & Hack Rooms GBA!">
 	<!-- JS --> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="js/efectos.js"></script>
 	<script type="text/javascript" src="js/ventana_emergente.js"></script>
 	<!-- CSS --> 
@@ -25,7 +25,7 @@
 <titulo>Pokémon Rooms & Hack Rooms</titulo><licencia><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Licencia Creative Commons" src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>.
 </licencia>
 <p>
-<boton1>Web creada por <font color="orange">Joaquin Centurion</font></boton1>
+<boton1>Web creada por <b><font color="red" >Joaquin Centurion</font></b></boton1>
 </p>
 </center>
 <p>
