--- a/rubi.html
+++ b/rubi.html
@@ -10,7 +10,7 @@
 	<!-- TITULO -->
 	<title>Pokémon Rubi | GBA | PDJ</title>
 	<!-- JS --> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -38,8 +38,8 @@
 		
 		</div>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 
 <script type="text/javascript">
 
@@ -81,6 +81,7 @@
 </div>
 <center>
 <p><boton2><a href="/roms/Pokemon - Rubi (S).zip">Click AQUI para descargar</a></boton2></p>
+<p><boton2><a href="myboy.apk">Click AQUI para descargar emulador para Android</a></boton2></p>
 </center>
 </body>
 </html>
