--- a/zei.html
+++ b/zei.html
@@ -10,7 +10,7 @@
 	<!-- TITULO -->
 	<title>Pokémon Zei | GBA | PDJ</title>
 	<!-- JS --> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -38,8 +38,8 @@
 		
 		</div>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 
 <script type="text/javascript">
 
@@ -81,6 +81,7 @@
 </div>
 <center>
 <p><boton2><a href="/roms/Pokemon - Zei (S).zip">Click AQUI para descargar</a></boton2></p>
+<p><boton2><a href="https://dw18.uptodown.com/dwn/c4houlLcjvEfcOxc-BGPkm08DDg3NXC-tMzHlNzXfKUGgfD4_dBetQhV_d85G8bAzWnRS-zpI0queVpA4TPQXDgCDzbbPhoESoja5Ins8iHrSP3xEpqLY0k3332SdFz7/mWEqeZckbB6-JpWv6h89PDrBkksSYFyPaDKCkeVFUUcRy4N7pbBMibrIpTHVIcSwjU7fOI8NoQDDYxoi7yWNnehSJY-HJn1ULcYztBpeJ489hNvbsNldgmOWLfRsEGMu/3qCj1op4tKybG7SnxTO8tAuX-wELZdItaJaIgndKwgJz8TYyWa4zi_-Og1NnHAJlh1ivf05ZwGvSCjoJwobTEEk902aLcLtR6ujH8rxZ5Xd86uolj-mwoXISWxmBDIif/a_o6AmzFbEm24zhXWl8uOU98Fchwjw2FXokRB5c_NGORUEdlsHi5VNT1kBpFcsSSU7u7TwVYMuOQWwu9PafbFg==/my-boy-free-gba-emulator-1-6-2-en-android.apk">Click AQUI para descargar emulador para Android</a></boton2></p>
 </center>
 </body>
 </html>
