--- a/rojofuego.html
+++ b/rojofuego.html
@@ -10,7 +10,7 @@
 	<!-- TITULO -->
 	<title>Pokémon Rojo Fuego | GBA | PDJ</title>
 	<!-- JS --> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -36,7 +36,8 @@
 			</div>
 		
 		</div>
-<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 <script type="text/javascript">
 
     var resizeOwnEmulator = function(width, height)
@@ -77,6 +78,7 @@
 </div>
 <center>
 <p><boton2><a href="/roms/Pokemon - Rojo Fuego (S).zip">Click AQUI para descargar</a></boton2></p>
+<p><boton2><a href="myboy.apk">Click AQUI para descargar emulador para Android</a></boton2></p>
 </center>
 </body>
 </html>
